--- a/index.html
+++ b/index.html
@@ -254,13 +254,14 @@
       align-items: center;
       justify-content: center;
       margin-top: 14px;
-      width: 34px;
-      height: 34px;
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
       background: rgba(255,255,255,0.15);
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       text-decoration: none;
+      color: inhenrit;
       transition: all .25s ease;
      }
 
