--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       color: white;
       font-size: 1.8rem;
       text-decoration: none;
-      color: inhenrit;
+      color: inherit;
       transition: all .25s ease;
      }
 
