--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     }
 
     .logo {
-      width: 100px;
+      display: block;
+      width: 320px;
+      margin: 0 auto 22px
       margin-bottom: 22px;
       opacity: 0.95;
     }
