--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     .logo {
       display: block;
       width: 320px;
-      margin: 0 auto 22px
-      margin-bottom: 22px;
+      margin: 0 auto 22px;
       opacity: 0.95;
     }
 
