--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     }
 
     .logo {
-      display: block;
+      display: flex;
       width: 320px;
-      margin: 0 auto 22px;
-      opacity: 0.95;
+      margin: 0 auto 8px;
+      align-items: center;
     }
 
     /* ================= INPUT ================= */
