--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <body>
   <div class="check-container">
-    <img src="Giftbox.png" alt="UDI logo" class="logo" />
+    <img src="Box.png" alt="UDI logo" class="logo" />
 
     <input
       id="walletInput"
