--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     }
 
     .logo {
-      display: flex;
-      width: 320px;
+      display: block;
+      width: 300px;
       margin: 0 auto 8px;
       align-items: center;
     }
