--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           statusEl.className = 'status';
         } else {
           statusEl.textContent =
-            'Not whitelisted yet, stay tuned for the next phase';
+            'Not whitelisted';
           statusEl.className = 'status fail';
         }
       } catch {
